crates/oxc_css_parser/tests/error/scss/value/operators/delimiter-in-calculation.snap
---
source: crates/oxc_css_parser/tests/error.rs
---
error: Sass expression is expected
  ┌─ delimiter-in-calculation.scss:2:11
  │
2 │   prop: 1-,;
  │           ^


